# INDE-577-Final-Project

./: .gitignore  ACSPUMS5Y2023_2025-11-07T22_26_04.137Z.csv  ACSPUMS5Y2023_2025-11-07T22_36_00.482Z.csv  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
datasets/: merge.py
src/: README.md
src/rice_ml/: __init__.py
src/rice_ml/supervised_learning/: decision_tree.py  decision_trees.py
src/supervised/: logistic_regression.py
src/supervised/Decision Tree/: README.md
src/supervised/Linear Regression/: Linear_Regression.ipynb  README.md
src/supervised/Logistic Regression/: README.md  logistic_regression.ipynb
tests/: test_basic_functions.py
